# collectibles

./: README.md
collect/: pyproject.toml
collect/collect/: apps.py  models.py  tests.py
collect/collect/migrations/: 0001_initial.py
collect/collect/package/: cog.py
